// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: .cursor/rules/{dir}.mdc > first per-directory rules file renders to a stable snapshot 1`] = `
"<!-- roadie:start:cursor-rules-dir:src -->
## src/ — source files

This directory contains source files (4 files detected).

When working in this directory:
- Follow existing code patterns and conventions.
- Maintain type safety and avoid \`any\`.
<!-- roadie:end:cursor-rules-dir:src -->
"
`;

exports[`Snapshot: .cursor/rules/project.mdc > renders to a stable snapshot 1`] = `
"<!-- roadie:start:tech-stack -->
## Tech Stack

- **TypeScript** 5.2.0 (language)
- **Node.js** (runtime)
- **Vitest** 0.34.0 (test_tool)
- **tsup** 8.0.0 (build_tool)
- **npm** (package_manager)
<!-- roadie:end:tech-stack -->

<!-- roadie:start:commands -->
## Commands

- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:commands -->
"
`;

exports[`Snapshot: .github/copilot-instructions.md > renders to a stable snapshot 1`] = `
"<!-- roadie:start:roadie-toc -->
# Project Instructions (ToC)

This file is the primary entry point for AI agents. To maintain reasoning quality, 
it follows the **Roadie 2026 Hierarchy**. Modular rules are linked below:

- [Technology Stack](./tech-stack.md)
- [Repository Structure](./structure.md)
- [Architectural Patterns](./patterns.md)
- [Operating Rules](./operating-rules.md)

## High-Level Objective
Maintain a high-quality TypeScript codebase following the WISC framework.
<!-- roadie:end:roadie-toc -->

<!-- roadie:start:core-commands -->
## Core Commands

- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:core-commands -->
"
`;

exports[`Snapshot: AGENTS.md > renders to a stable snapshot (no learningDb) 1`] = `
"<!-- roadie:start:project-overview -->
# Project Overview

**Tech stack:** TypeScript, Node.js, Vitest, tsup, npm

This file is auto-generated by Roadie and provides context for AI coding agents.
Do not edit sections between \`<!-- roadie:start -->\` and \`<!-- roadie:end -->\` markers.
Custom notes added outside markers are preserved across regenerations.
<!-- roadie:end:project-overview -->

<!-- roadie:start:commands -->
## Project Commands

- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:commands -->

<!-- roadie:start:agent-roles -->
## Agent Roles

| Role | Scope | Name in Dropdown |
|------|-------|------------------|
| Strategist | Orchestration, planning (Goal-Backward), and architecture | \`agent: strategist\` |
| Builder | Core development (Interface-First), Backend, Frontend, DB | \`agent: builder\` |
| Critic | Quality auditing, security, and scientific code review | \`agent: critic\` |
| Delivery | Deployment, docs, and release integrity | \`agent: delivery\` |
| Debugger | Scientific Debugging (Falsifiable Hypotheses) | \`agent: debugger\` |
<!-- roadie:end:agent-roles -->

<!-- roadie:start:workflows -->
## Available Workflows

| Workflow | Trigger | Steps | Methodology |
|----------|---------|-------|-------------|
| Bug Fix | \`@roadie fix ...\` | 8 | **EPIC** |
| Feature | \`@roadie add/create/build ...\` | 7 | **EPIC** |
| Refactor | \`@roadie refactor/simplify ...\` | 5 | **EPIC** |
| Review | \`@roadie review ...\` | 5 | **EPIC** |
| Document | \`@roadie document/docs ...\` | 4 | **EPIC** |
| Dependency | \`@roadie upgrade/migrate ...\` | 5 | **EPIC** |
| Onboard | \`@roadie how does/where do I start ...\` | 4 | **EPIC** |
<!-- roadie:end:workflows -->

<!-- roadie:start:core-principles -->
## Core Engineering Principles (Level 4 Extreme Rigor)

- **Goal-Backward Planning (Exit-Condition First):** Every task must define an **Observable Truth** before any code is written. Verbs like \\"improve\\" or \\"fix\\" are forbidden; use \\"Ensure X returns Y when Z\\".
- **Adversarial Red-Teaming:** Before implementing any plan, you MUST list 3 failure modes (\\"Why this won't work\\") and their associated mitigations.
- **Metacognitive Steering:** Every 3 turns, perform a self-audit: \\"Am I caught in a sunk-cost loop? Is there a simpler 'Wave 0' approach I missed?\\"
- **Interface-First (Wave 0):** Define types and exports before implementation logic.
- **WISC Token Hygiene (Contextual Bankruptcy):** Clean context at 80% saturation. Apply **Write-Isolate-Select-Compress** to all prompts.
  | Phase | Action |
  |-------|--------|
  | **Write** | Externalize memory via progress/decision logs. |
  | **Isolate** | Use auxiliary agents for research; return compressed summaries. |
  | **Select** | Load only exact files needed. Use \`.roadieignore\`. |
  | **Compress** | Hard-reset context at saturation limits. |
- **Adaptive Processing:** Economy (Low) → Standard (Med) → Quality (High) → **Max Analytics (Extreme Rigor)**.
<!-- roadie:end:core-principles -->

<!-- roadie:start:interaction-patterns -->
## Agent Interaction Patterns

- **Writer-Reviewer:** Implementing agents are paired with an isolated Reviewer agent that audits changes for security and performance in real-time.
- **Competing Hypotheses:** For complex systemic bugs, multiple agents are spawned on separate worktrees testing different solutions simultaneously.
- **Structural Checkpoints:** All technical tasks must commit failing tests (TDD) before implementation code is authorized.
<!-- roadie:end:interaction-patterns -->

<!-- roadie:start:directory-structure -->
## Directory Structure

- **Source:** src
- **Tests:** test
<!-- roadie:end:directory-structure -->
"
`;

exports[`Snapshot: CLAUDE.md > renders to a stable snapshot 1`] = `
"<!-- roadie:start:workspace-rules -->
# Global Rules — Apply in Every Workspace

## Tech Stack
- **TypeScript** 5.2.0 (language)
- **Node.js** (runtime)
- **Vitest** 0.34.0 (test_tool)
- **tsup** 8.0.0 (build_tool)
- **npm** (package_manager)

## Commands
- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:workspace-rules -->

<!-- roadie:start:repo-map -->
## Repository Map

- **src/** (source) — 4 files
- **test/** (test) — 3 files
- **scripts/** (scripts)
<!-- roadie:end:repo-map -->

<!-- roadie:start:forbidden -->
## Forbidden

_Add project-specific forbidden patterns here. This section is preserved across regenerations._
<!-- roadie:end:forbidden -->
"
`;

exports[`Snapshot: path-instructions > first instruction file renders to a stable snapshot 1`] = `
"<!-- roadie:start:path-instructions -->
---
name: \\"instruction: src\\"
description: Path-scoped instructions for /src (source files)
generated-by: roadie
generated-at: 2026-04-17T12:00:00Z
---

## src/ — source files

This directory contains source files (4 files detected).

When working in this directory:
- Follow existing code patterns and conventions.
- Maintain type safety and avoid \`any\`.
- **Apply WISC:** Write progress logs, Isolate complex logic, Select only needed files, Compress context window.
- **Effort Level:** For refactoring or complex changes, default to **High** effort level.
<!-- roadie:end:path-instructions -->
"
`;
